# iCamera

./: .gitignore  README.md  gen_icon.py  pubspec.yaml
.github/workflows/: ios_build.yml
AndroidApp/: README.md
android/app/: build.gradle.kts  proguard-rules.pro
assets/luts/: leica_artist.cube  leica_bw.cube  leica_classic.cube  leica_contemporary.cube  leica_vivid.cube
iPhoneApp/: README.md  add_section15.py  add_sections_heif_pro.py  gen_manual.py  iCamera_User_Manual.docx  patch_manual.py  update_manual_wb2.py
ios/: NativeProcessor.podspec  Podfile
ios/Runner/: AppDelegate.swift  Info.plist  ObjCExceptionCatcher.h  ObjCExceptionCatcher.m  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: constants.dart
lib/core/theme/: app_theme.dart  leica_colors.dart
lib/features/bokeh/: bokeh_engine.dart  depth_estimator.dart  segmentation_service.dart
lib/features/camera/: camera_service.dart
lib/features/color_science/: color_profile.dart  leica_looks.dart  lut_engine.dart
lib/features/lens_simulation/: lens_profile.dart  lens_renderer.dart
lib/features/raw_capture/: dng_writer.dart
lib/native/: lut_cache.dart  native_bridge.dart  native_processor.dart
lib/services/: image_pipeline.dart  manual_camera_service.dart  storage_service.dart
lib/ui/screens/: camera_screen.dart  gallery_screen.dart  settings_screen.dart
lib/ui/widgets/: aperture_dial.dart  (+6 more)
native/: CMakeLists.txt  bokeh_kernel.cpp  icamera_native.h  image_pipeline.cpp  lens_sim.cpp  lut_engine.cpp
test/: widget_test.dart
(+5 files in other folders)
